# quartiles

./: .gitignore  LICENSE  README.md  Top100000.txt  quartiles.cabal  words.txt
app/: Main.hs
lib/: Quartiles.hs
