cabal-version:   3.0
name:            quartiles
version:         0.0.0
author:          Melanie Phoenix Brown
copyright:       2025 Melanie Phoenix Brown
category:        Games
build-type:      Simple
license-file:    LICENSE
license:         BSD-2-Clause
extra-doc-files: CHANGELOG.md
synopsis:
  Quartiles solver
description:
  Quartiles solver

library
  ghc-options:      -Wall -Wno-unticked-promoted-constructors
  hs-source-dirs:   lib
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    PatternSynonyms
    TypeFamilies

  build-depends:
    , base >= 4.18
    , case-insensitive
    , text

  exposed-modules:
    Quartiles
