cabal-version:   3.0
name:            quartiles
version:         0.0.0
author:          Melanie Phoenix Brown
copyright:       2025 Melanie Phoenix Brown
category:        Games
build-type:      Simple
license-file:    LICENSE
license:         BSD-2-Clause
synopsis:
  Quartiles solver
description:
  Quartiles solver

executable quartiles
  ghc-options:      -Wall -Wno-unticked-promoted-constructors
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    PatternSynonyms
    TypeFamilies

  build-depends:
    , base >= 4.18
    , containers
    , text
